test/errors/enumeration_types_error/zs/string_enum_error.zs
package string_enum_error;

enum string WrongStringEnum
{
    NONE      = 0,
    SOMETHING = 1
};
